tests/NormalTests/paczka2/big_fuzzy/49117395.err
Error in line 4: 3N2 S314 93,7
Error in line 5: 3N2 A15 22,4
Error in line 6: xY6fpY2U8n A15 74,0
Error in line 8: 3N2 A848 80,8
Error in line 12: 3N2 A519 249,18
Error in line 15: hqD A848 30,7
Error in line 20: S314 S314 16,6
Error in line 25: cBg2m S314 67,9
Error in line 28: cBg2m A15 40,6
Error in line 33: cBg2m A848 53,0
Error in line 21: 3N2 A519 151,7
Error in line 52: xY6fpY2U8n A15 74,1
Error in line 57: xY6fpY2U8n A848 27,9
Error in line 58: xY6fpY2U8n A519 84,1
Error in line 65: xY6fpY2U8n A15 92,9
Error in line 72: ZaBozNgI A15 25,3
Error in line 79: S314 A15 24,1
Error in line 96: LjC8NcG4 S314 6,5
Error in line 103: xY6fpY2U8n A848 45,2
Error in line 106: xY6fpY2U8n A519 88,4
Error in line 109: xY6fpY2U8n S314 67,9
Error in line 113: xY6fpY2U8n A848 48,3
Error in line 117: LjC8NcG4 A848 45,9
Error in line 111: S314 A848 60,8
Error in line 121: hqD A15 -1,6
Error in line 120: S314 A519 71,5
Error in line 112: hqD A15 10,3
Error in line 115: xY6fpY2U8n S314 80,6
Error in line 130: xY6fpY2U8n A848 21,4
Error in line 162: hqD S314 92,9
Error in line 166: ZaBozNgI A519 10,84
Error in line 171: ZaBozNgI A519 -1,4
Error in line 172: ZaBozNgI A848 16,93
Error in line 167: 3N2 A519 43,1
Error in line 180: LjC8NcG4 A519 16,4
Error in line 176: S314 A15 65,6
Error in line 192: 3N2 A15 76,2
Error in line 202: hqD S314 65,7
Error in line 211: S314 A519 16,3
Error in line 212: hqD A848 58,7
Error in line 213: S314 A848 42,6
Error in line 177: ZaBozNgI A848 76,8
Error in line 220: xY6fpY2U8n S314 67,6
Error in line 225: xY6fpY2U8n A15 38,7
Error in line 243: ZaBozNgI S314 74,1
